--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,8 +1,18 @@
-@import 'bootstrap-custom';
-@import 'font-awesome';
-@import 'prettify';
+@import 'bourbon';
 
-@import 'base';
+@import 'helpers/list-functions';
+
+@import 'media';
+@import 'neat';
+
+@import 'normalize';
+@import 'reset';
+@import 'font-awesome';
+
+@import 'colors';
+@import 'typography';
+
+@import 'base-new';
 @import 'custom';
 
 
