--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -7,7 +7,7 @@ $desktop: min-width $narrow-breakpoint + 1px;
 
 
 // grid 布局调试设置
-$visual-grid: true;
+$visual-grid: false;
 $visual-grid-color: #000;
 $visual-grid-opacity: 0.05;
 $visual-grid-index: front;
