--- a/sass/app.scss
+++ b/sass/app.scss
@@ -13,7 +13,9 @@
 @import 'typography';
 
 @import 'base-new';
-@import 'custom';
+@import 'nav';
+@import 'sponsors';
+@import 'speakers';
 
 
 // vim:set ai et ts=2 sw=2 sts=2 fenc=utf-8:
