--- a/sass/_base-new.scss
+++ b/sass/_base-new.scss
@@ -8,4 +8,85 @@ html {
 }
 
 
+// logo
+.pycon-logo {
+  display: block;
+  margin: 2.5em auto;
+}
+
+
+// 内容模块
+.page__module {
+  @include clearfix;
+
+  position: relative;  // 以防万一
+  width: 100%;
+}
+
+.section__content {
+  @include outer-container;
+
+  overflow: hidden;
+}
+
+// Disqus 模块属于内容性质, 限制宽度
+.page__disqus {
+  @include outer-container;
+}
+
+
+// 各种标题
+.title-common {
+  width: 100%;
+  text-align: center;
+}
+
+.section__title--index {
+  @extend .title-common;
+
+  background-color: $index-title-bg;
+  color: $index-title-fg;
+
+  padding: 0.1em 0;
+
+  font-size: 250%;
+  font-weight: 700;
+}
+
+.section__title {
+  @extend .title-common;
+
+  background-color: $section-title-bg;
+  color: $section-title-fg;
+
+  padding: 0.1em 0;
+
+  font-size: 200%;
+  font-weight: 600;
+}
+
+// 子标题
+.title-subsection {
+  position: absolute;
+  top: 0.5em;
+  left: 0;
+
+  font-size: 400%;
+  font-weight: 600;
+  line-height: 1;
+
+  color: rgba(0, 0, 0, 0.12);
+
+  // @include transform(rotate(-15deg));
+  // @include transform-origin(25% 75%);
+}
+
+@mixin subsection-container {
+  position: relative;
+
+  // clip 掉旋转出容器的那部分标题
+  overflow: hidden;
+}
+
+
 // vim:set ai et ts=2 sw=2 sts=2 fenc=utf-8:
