--- a/sass/app.scss
+++ b/sass/app.scss
@@ -16,6 +16,8 @@
 @import 'nav';
 @import 'sponsors';
 @import 'speakers';
+@import 'donators';
+@import 'footer';
 
 
 // vim:set ai et ts=2 sw=2 sts=2 fenc=utf-8:
