--- a/sass/_speakers.scss
+++ b/sass/_speakers.scss
@@ -32,11 +32,15 @@
 
   &:after {
     @include media($desktop) {
-      content: '\A讲师';
+      html[lang='cn'] & {
+        content: '\A讲师';
+      }
     }
 
     @include media($narrow) {
-      content: '讲师';
+      html[lang='cn'] & {
+        content: '讲师';
+      }
     }
 
     font-weight: 200;
