sass: 视觉上区分有下拉菜单的导航项

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -25,6 +25,10 @@
 .dropdown {
   position: relative;
 
+  &:after {
+    @include fa-inplace($fa-var-caret-down);
+  }
+
   .dropdown-menu {
     display: none;
   }
