sass: 完成介绍文字部分样式

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -25,6 +25,8 @@ $index-title-fg: $text-color;
 $section-title-bg: rgba(#000, $alpha-divider);
 $section-title-fg: #212121;  // Grey 900
 
+$brand-success: #8bc34a;  // Light Green 500
+
 
 // 赞助模块
 $sponsor-diamond-bg: #fff;
