sass: 重构名片样式; 实现志愿者页面样式

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -19,7 +19,9 @@
 @import 'intro';
 @import 'sponsors';
 @import 'speakers';
+@import 'person';
 @import 'donators';
+@import 'volunteers';
 @import 'footer';
 
 
