--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -37,10 +37,10 @@ $sponsor-bronze-bg: #d7ccc8;  // Brown 100
 $sponsor-partner-bg: $page-bg;
 
 
-// 讲师模块
-$speaker-card-bg: #f5f5f5; // Grey 100
-$speaker-card-border-color: #e0e0e0;  // Grey 300
-$speaker-card-shadow-color: rgba(0, 0, 0, 0.125);
+// 名片
+$person-card-bg: #f5f5f5; // Grey 100
+$person-card-border-color: #e0e0e0;  // Grey 300
+$person-card-shadow-color: rgba(0, 0, 0, 0.125);
 
 
 // vim:set ai et ts=2 sw=2 sts=2 fenc=utf-8:
