sass: 为日程页面内容行添加 hover 样式

--- a/sass/_schedule.scss
+++ b/sass/_schedule.scss
@@ -85,6 +85,11 @@
   }
 
   border-bottom: 1px solid rgba(#000, $alpha-divider);
+
+  &:hover {
+    border-bottom-color: transparent;
+    box-shadow: 0 0.5em 1em rgba(#000, $alpha-hint);
+  }
 }
 
 .schedule__topic__time {
