sass: 重命名新的 base 样式文件

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -14,7 +14,7 @@
 @import 'colors';
 @import 'typography';
 
-@import 'base-new';
+@import 'base';
 @import 'nav';
 @import 'intro';
 @import 'sponsors';
