sass: 实现赞助页面样式

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -21,6 +21,7 @@
 @import 'speakers';
 @import 'person';
 @import 'donators';
+@import 'sponsorpage';
 @import 'schedule';
 @import 'volunteers';
 @import 'footer';
