--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -59,25 +59,43 @@
 
 // 小模块布局
 .mod-intro__text {
-  @include span-columns(12);
+  @include media($wide) {
+    @include span-columns(12);
+  }
+
+  @include media($narrow) {
+    @include span-columns(6);
+  }
+
+  @include media($mobile) {
+    @include span-columns(4);
+  }
 }
 
 .mod-intro__tickets,
 .mod-intro__apply,
 .mod-intro__topics,
 .mod-intro__contact {
-  @include media($desktop) {
+  @include media($wide) {
     @include span-columns(6);
   }
 
   @include media($narrow) {
-    @include span-columns(12);
+    @include span-columns(3);
+  }
+
+  @include media($mobile) {
+    @include span-columns(4);
   }
 }
 
 .mod-intro__apply,
 .mod-intro__contact {
-  @include media($desktop) {
+  @include media($wide) {
+    @include omega;
+  }
+
+  @include media($narrow) {
     @include omega;
   }
 }
@@ -106,14 +124,32 @@
     }
 
     > dt {
-      @include media($desktop) {
+      @include media($wide) {
         @include span-columns(1 of 6);
+      }
+
+      @include media($narrow) {
+        @include span-columns(1 of 3);
+      }
+
+      @include media($mobile) {
+        @include span-columns(1 of 4);
       }
     }
 
     > dd {
-      @include media($desktop) {
+      @include media($wide) {
         @include span-columns(5 of 6);
+        @include omega;
+      }
+
+      @include media($narrow) {
+        @include span-columns(2 of 3);
+        @include omega;
+      }
+
+      @include media($mobile) {
+        @include span-columns(3 of 4);
         @include omega;
       }
     }
@@ -133,6 +169,7 @@
 .intro__apply-link {
   background-color: lighten($brand-success, 20);
 
+  margin-bottom: 1em;
   padding: 0.5em;
 
   &:hover {
@@ -140,16 +177,19 @@
     box-shadow: 0 0.5em 1em rgba(#000, $alpha-hint);
   }
 
-  @include media($desktop) {
+  @include media($wide) {
     @include span-columns(2 of 6);
     @include omega(3n);
-
-    margin-bottom: 1em;
   }
 
   @include media($narrow) {
-    @include span-columns(4);
+    @include span-columns(1 of 3);
     @include omega(3n);
+  }
+
+  @include media($mobile) {
+    @include span-columns(2);
+    @include omega(2n);
   }
 }
 
