--- a/sass/_person.scss
+++ b/sass/_person.scss
@@ -1,4 +1,16 @@
 // 名片 (media object)
+// 容器
+@mixin person-container {
+  // 为了让每一行的名片高度统一, Flexbox 搞起
+  // oldIE 是什么, 可以吃吗?
+  @include media($non-mobile) {
+    @include display(flex);
+    @include flex-wrap(wrap);
+  }
+}
+
+
+// 名片
 .person {
   @include clearfix;
 
@@ -28,13 +40,19 @@
 
   // 布局
   @include media($wide) {
-    @include span-columns(6);
-    @include omega(2n);
+    @include flex(0 0 flex-grid(6));
+
+    &:nth-child(2n) {
+      margin-left: flex-gutter();
+    }
   }
 
   @include media($narrow) {
-    @include span-columns(3);
-    @include omega(2n);
+    @include flex(0 0 flex-grid(3, 6));
+
+    &:nth-child(2n) {
+      margin-left: flex-gutter(6);
+    }
   }
 
   @include media($mobile) {
