scss fixed link style

--- a/sass/_schedule.scss
+++ b/sass/_schedule.scss
@@ -8,6 +8,11 @@
   padding: 2em 0;
 }
 
+.schedule__table-container a{
+  font-size: 95%;
+  color: blue;
+  font-weight: normal;
+}
 
 // 元数据
 .schedule__metadata__key,
