在珠海议程,增补所有 媒体资料链接

--- a/sass/_schedule.scss
+++ b/sass/_schedule.scss
@@ -13,6 +13,11 @@
   color: blue;
   font-weight: normal;
 }
+.schedule__notices a{
+  font-size: 95%;
+  color: blue;
+  font-weight: normal;
+}
 
 // 元数据
 .schedule__metadata__key,
